sqlite3/assets/sqlite3.h

typedef struct sqlite3_char sqlite3_char;
typedef struct sqlite3 sqlite3;
typedef struct sqlite3_stmt sqlite3_stmt;
typedef struct sqlite3_backup sqlite3_backup;
typedef struct sqlite3_api_routines sqlite3_api_routines;
typedef struct sqlite3_session sqlite3_session;
typedef struct sqlite3_changeset_iter sqlite3_changeset_iter;
int sqlite3_busy_handler(sqlite3* db, int (*)(void*, int), void* context);
void* sqlite3_commit_hook(sqlite3*, int (*)(void*), void*);
// Values

typedef struct sqlite3_value sqlite3_value;
// Functions

typedef struct sqlite3_context sqlite3_context;
// Collations
int sqlite3_create_collation_v2(sqlite3*, sqlite3_char* zName, int eTextRep,
                                void* pArg,
                                int (*xCompare)(void*, int, const void*, int,
                                                const void*),
                                void (*xDestroy)(void*));
// VFS
typedef struct sqlite3_file sqlite3_file;
struct sqlite3_io_methods {
  int iVersion;
  int (*xClose)(sqlite3_file*);
  int (*xRead)(sqlite3_file*, void*, int iAmt, int64_t iOfst);
  int (*xWrite)(sqlite3_file*, const void*, int iAmt, int64_t iOfst);
  int (*xTruncate)(sqlite3_file*, int64_t size);
  int (*xSync)(sqlite3_file*, int flags);
  int (*xFileSize)(sqlite3_file*, int64_t* pSize);
  int (*xLock)(sqlite3_file*, int);
  int (*xUnlock)(sqlite3_file*, int);
  int (*xCheckReservedLock)(sqlite3_file*, int* pResOut);
  int (*xFileControl)(sqlite3_file*, int op, void* pArg);
  int (*xSectorSize)(sqlite3_file*);
  int (*xDeviceCharacteristics)(sqlite3_file*);
  /* Methods above are valid for version 1 */
  int (*xShmMap)(sqlite3_file*, int iPg, int pgsz, int, void**);
  int (*xShmLock)(sqlite3_file*, int offset, int n, int flags);
  void (*xShmBarrier)(sqlite3_file*);
  int (*xShmUnmap)(sqlite3_file*, int deleteFlag);
  /* Methods above are valid for version 2 */
  int (*xFetch)(sqlite3_file*, int64_t iOfst, int iAmt, void** pp);
  int (*xUnfetch)(sqlite3_file*, int64_t iOfst, void* p);
  /* Methods above are valid for version 3 */
  /* Additional methods may be added in future releases */
};
struct sqlite3_file {
  const struct sqlite3_io_methods* pMethods; /* Methods for an open file */
};
typedef struct sqlite3_vfs sqlite3_vfs;
typedef void (*sqlite3_syscall_ptr)(void);
typedef const char* sqlite3_filename;
struct sqlite3_vfs {
  int iVersion;       /* Structure version number (currently 3) */
  int szOsFile;       /* Size of subclassed sqlite3_file */
  int mxPathname;     /* Maximum file pathname length */
  sqlite3_vfs* pNext; /* Next registered VFS */
  const char* zName;  /* Name of this virtual file system */
  void* pAppData;     /* Pointer to application-specific data */
  int (*xOpen)(sqlite3_vfs*, sqlite3_filename zName, sqlite3_file*, int flags,
               int* pOutFlags);
  int (*xDelete)(sqlite3_vfs*, const char* zName, int syncDir);
  int (*xAccess)(sqlite3_vfs*, const char* zName, int flags, int* pResOut);
  int (*xFullPathname)(sqlite3_vfs*, const char* zName, int nOut, char* zOut);
  void* (*xDlOpen)(sqlite3_vfs*, const char* zFilename);
  void (*xDlError)(sqlite3_vfs*, int nByte, char* zErrMsg);
  void (*(*xDlSym)(sqlite3_vfs*, void*, const char* zSymbol))(void);
  void (*xDlClose)(sqlite3_vfs*, void*);
  int (*xRandomness)(sqlite3_vfs*, int nByte, char* zOut);
  int (*xSleep)(sqlite3_vfs*, int microseconds);
  int (*xCurrentTime)(sqlite3_vfs*, double*);
  int (*xGetLastError)(sqlite3_vfs*, int, char*);
  /*
  ** The methods above are in version 1 of the sqlite_vfs object
  ** definition.  Those that follow are added in version 2 or later
  */
  int (*xCurrentTimeInt64)(sqlite3_vfs*, int64_t*);
  /*
  ** The methods above are in versions 1 and 2 of the sqlite_vfs object.
  ** Those below are for version 3 and greater.
  */
  int (*xSetSystemCall)(sqlite3_vfs*, const char* zName, sqlite3_syscall_ptr);
  sqlite3_syscall_ptr (*xGetSystemCall)(sqlite3_vfs*, const char* zName);
  const char* (*xNextSystemCall)(sqlite3_vfs*, const char* zName);
  /*
  ** The methods above are in versions 1 through 3 of the sqlite_vfs object.
  ** New fields may be appended in future versions.  The iVersion
  ** value will increment whenever this happens.
  */
};
int sqlite3changeset_apply(
    sqlite3* db,               /* Apply change to "main" db of this handle */
    int nChangeset,            /* Size of changeset in bytes */
    void* pChangeset,          /* Changeset blob */
    int (*xFilter)(void* pCtx, /* Copy of sixth arg to _apply() */
                   const char* zTab /* Table name */
                   ),
    int (*xConflict)(
        void* pCtx,               /* Copy of sixth arg to _apply() */
        int eConflict,            /* DATA, MISSING, CONFLICT, CONSTRAINT */
        sqlite3_changeset_iter* p /* Handle describing change and conflict */
        ),
    void* pCtx /* First argument passed to xConflict */
);